--- a/wordcloude.html
+++ b/wordcloude.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="jquery.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>
     <link rel="stylesheet" href="wordcloud.css" type="text/css" media="screen" />
     <script src="cloud.js"></script>
