--- a/wordcloud.html
+++ b/wordcloud.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <script src="jquery.js"></script>
-    <script src="d3.min.js"></script>
+<!--     <script src="d3.min.js"></script> -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>
     <link rel="stylesheet" href="wordcloud.css" type="text/css" media="screen" />
     <script src="cloud.js"></script>
   </head>
