--- a/wordcloud.html
+++ b/wordcloud.html
@@ -64,7 +64,7 @@
               .attr("width", width)
               .attr("height", height)
             .append("g")
-              .attr("transform", "translate(" + [width >> 1, height >> 1] + ")")
+              .attr("transform", "translate(800,800)")
             .selectAll("text")
               .data(words)
             .enter().append("text")
