--- a/memo.html
+++ b/memo.html
@@ -8,7 +8,7 @@
   <title>메모장</title>
   </head>
   <body>
-    <img src="img/list.png" class="list">
+    <a href="index.html"><img src="img/list.png" class="list"><br>
     <div class="memo">
       <div class="sec-memo-list">
         <!-- <h2 class="head-title">MEMO</h2> -->
