--- a/pingpong.html
+++ b/pingpong.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="pingpong.css" type="text/css" media="screen" />
   </head>
-  <img src="img/list.png" class="list"><br>
+  <a href="index.html"><img src="img/list.png" class="list"><br>
   <body>
     <canvas id="myCanvas" width="1180" height="530"></canvas>
     <script type="text/javascript" src="pingpong.js"></script>
