--- a/todolist.html
+++ b/todolist.html
@@ -5,7 +5,7 @@
 <link href="todolist.css" type="text/css" rel="stylesheet">
 </head>
   <body>
-  <img src="img/list.png" class="list">
+  <a href="index.html"><img src="img/list.png" class="list"><br>
   <div class="main">
   <div id= "myDIV" class="first">TO DO LIST</div>
   <div id = "myDIV" class = "header" > 
