--- a/wordcloud.html
+++ b/wordcloud.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <img src="img/list.png" class="list"><br>
+    <a href="index.html"><img src="img/list.png" class="list"><br>
     <div id="chart"></div>
     <script>
       <!-- 문장을 입력받아서 -->
