--- a/canvas.html
+++ b/canvas.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="canvas.css" />
 </head>
 <body>
-<a href="index.html"><img src="img/list.png" class="list"><br>
+<a href="index.html"><img src="img/list.png" class="list"><a>
 <div class="body">
 <div>
   <div class="color-options">
