--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>메인화면</title>
 </head>
 <body>
-    <a href="index.html"><img src="img/list.png" class="list"><br>
+    <a href="index.html"><img src="img/list.png" class="list"><a>
     <div class="main">
     <div class="bigbox">
         <a href="canvas.html"><img src="img/right-arrow.png" class="arrow"></a>
